search not working, fixed viewpager to work with database

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,10 +20,11 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/editTextText"
+                android:id="@+id/editSearch"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_margin="16dp"
+                android:textColor="@color/white"
                 android:background="@drawable/edittext_background"
                 android:drawableStart="@drawable/search"
                 android:drawableEnd="@drawable/microphone"
